# aissemble-lite-example

./: .gitignore  README.md  pyproject.toml
deploy/postgres/: Chart.yaml  README.md  values.yaml
deploy/postgres/templates/: deployment.yaml  flyway-job.yaml  ingress.yaml  service.yaml  volume-claim.yaml  volume.yaml
deploy/simple-pipeline/: Chart.yaml  values.yaml
deploy/simple-pipeline/templates/: configmap.yaml  job.yaml
docker/flyway-migration/: README.md
docker/flyway-migration/docker/: Dockerfile
docker/flyway-migration/flyway/migrations/: V1_0__create_filenames_and_landmarks_schema.sql  V2_0__create_audio_features_schema.sql  V3_0__create_pain_and_demographics_schema.sql  V4_0__create_pipeline_state_schema.sql
docker/notebooks/: Dockerfile
docker/simple-pipeline/: Dockerfile
notebooks/: example.py
src/aissemble_lite_example/: driver.py  ingest_data.py
src/debug_python_in_k8s_env_example/: driver.py  process_data.py
