[tool.poetry]
name = "aissemble-lite-example"
version = "0.1.0"
description = ""
authors = ["Margaret Black <black_margaret@bah.com>"]
readme = "README.md"
packages = [{include = "aissemble_lite_example", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.2"
ipykernel = "^6.29.5"
nbformat = ">=4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
