[tool.poetry]
name = "debug-python-in-k8s-env"
version = "0.1.0"
description = ""
authors = ["Margaret Black <black_margaret@bah.com>"]
readme = "README.md"
packages = [{include = "debug_python_in_k8s_env_example", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.2"
ipykernel = "^6.29.5"
nbformat = ">=4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
